# leptos-tailwindcss

./: .gitignore  Cargo.toml  README.md  package.json  tailwind.config.js
.cargo/: config.toml
migrations/: 20250505_create_user_table.sql
src/: app.rs  main.rs
src/app/: pages.rs
src/app/pages/: home.rs
style/: main.scss
